# pbFunctions

./: CMakeLists.txt  setup.py
src/: DynamicFib.cpp  DynamicFib.h  MatrixFib.cpp  MatrixFib.h  fib.cpp  fib.h  simple.cpp  simple.h  sqrtTrick.cpp  sqrtTrick.h  test.cpp
